--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>Bolt</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/bootstrap-grid.css">
     <link rel="stylesheet" href="./css/bootstrap-reboot.css">
@@ -11,6 +12,25 @@
     <script src="./js/bootstrap.js"></script>
 </head>
 <body>
+<nav class="navbar fixed-top">
+    <a class="navbar-brand" href="#">
+        <img class="navbar-brand-logo" src="img/nav_logo_light.png">
+    </a>
+    <div class="d-flex flex-row flex-sm-row-reverse align-items-center">
+        <button>test</button>
+        <p>Already have an account?</p>
+    </div>
+</nav>
 
+<main role="main" class="container-fluid">
+    <div class="row ui-main">
+        <div class="col-sm-6 ui-main__left flex-column justify-content-center align-items-center d-sm-flex d-sm-none">
+            <h1>Drive with Taxify
+                <span>Earn good money with your car.</span>
+            </h1>
+        </div>
+        <div class="col-sm-6 container-sm ui-main__right flex-column justify-content-center align-items-center">33</div>
+    </div>
+</main>
 </body>
 </html>
