--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./css/bootstrap-grid.css">
     <link rel="stylesheet" href="./css/bootstrap-reboot.css">
     <link rel="stylesheet" href="./css/custom.css">
-    <script src="./js/bootstrap.js"></script>
 </head>
 <body>
 <nav class="navbar fixed-top">
@@ -20,7 +19,7 @@
     <div class="d-flex flex-row flex-sm-row-reverse align-items-center navbar-action">
         <button class="btn btn-light"><img src="./img/icon-globe.svg" height="22"><span
                 class="d-none d-sm-inline-block">English</span></button>
-        <button class="btn btn-secondary mr-4">SIGN IN</button>
+        <button class="btn btn-secondary mr-3">SIGN IN</button>
         <p class="mb-0 mr-3 d-none d-md-block">Already have an account?</p>
     </div>
 </nav>
@@ -38,7 +37,7 @@
                 <p>Sign up here if you a driver who would like to use Taxify platform.</p>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
                     <small id="emailHelp" class="form-text pl-0">Will be using as your username</small>
                 </div>
                 <div class="form-group">
@@ -48,8 +47,8 @@
                             <button class="btn btn-outline-light text-left" type="button" id="exampleInputPhone">+372
                             </button>
                         </div>
-                        <input type="text" class="form-control" placeholder="" maxlength="16"
-                               aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <input type="tel" class="form-control" placeholder="555-555-33" maxlength="16"
+                               pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}" required>
                     </div>
                 </div>
                 <div class="form-group">
